--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="card">
                         <h3>المحاضرة الثانية</h3>
                         <p>استكمال ال HTML ةالتعرف على اكواد جديده</p>
-                        <a href="assets/Pages/S2.html" class="btn disactive">ابدأ الآن</a>
+                        <a href="assets/Pages/S2.html" class="btn">ابدأ الآن</a>
                     </div>
                     <!-- Card 3 -->
                     <div class="card">
