--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="card">
                         <h3>المحاضرة الثالثة</h3>
                         <p>مراجعه شامله على ال HTML وبدايه CSS</p>
-                        <a href="assets/Pages/f-html.html" class="btn disactive">ابدأ الآن</a>
+                        <a href="assets/Pages/f-html.html" class="btn">ابدأ الآن</a>
                     </div>
                     <!-- Card 4 -->
                     <div class="card">
