--- a/assets/Pages/S2.html
+++ b/assets/Pages/S2.html
@@ -19,7 +19,7 @@
         <a href="../../index.html" class="btn">Home / </a>
         <a href="S1.html" class="btn">Session 1 /</a>
         <a class="btn active">Session 2 /</a>
-        <a href="S3.html" class="btn">Session 3 /</a>
+        <a href="f-html.html" class="btn">Full HTML /</a>
         <a href="S4.html" class="btn">Session 4 /</a>
     </nav>
     <!-- End Nav -->
