--- a/assets/Pages/S1.html
+++ b/assets/Pages/S1.html
@@ -16,9 +16,9 @@
 <!-- Start Nav -->
     <nav>
         <a href="../../index.html" class="btn">Home / </a>
-        <a class="btn active" >Session 1 /</a>
-        <a class="btn disactive" >Session 2 /</a>
-        <a class="btn disactive">Session 3 /</a>
+        <a href="S1.html" class="btn active">Session 1 /</a>
+        <a href="S2.html" class="btn">Session 2 /</a>
+        <a href="f-html.html" class="btn">Full HTML /</a>
         <a class="btn disactive">Session 4 /</a>
     </nav>
 <!-- End Nav -->
