--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="card">
                         <h3>المحاضرة الرابعة</h3>
                         <p>أساسيات المقاسات في ال CSS</p>
-                        <a href="assets/Pages/S4.html" class="btn disactive">ابدأ الآن</a>
+                        <a href="assets/Pages/S4.html" class="btn">ابدأ الآن</a>
                     </div>
                     <!-- Card 5 -->
                     <div class="card">
