--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <div class="card">
                         <h3>Exam 1</h3>
                         <p>مراجعه شامله على ال HTML</p>
-                        <a href="assets/exam/Ex1.html" class="btn disactive">ابدأ الآن</a>
+                        <a href="assets/exam/Ex1.html" class="btn">ابدأ الآن</a>
                     </div>
                     <!-- Card 2 -->
                     <div class="card">
