--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     </div>
                     <!-- Card 14 -->
                     <div class="card">
-                        <h3>المحاضرة الرايعة عشر</h3>
+                        <h3>المحاضرة الرابعة عشر</h3>
                         <p>NA</p>
                         <a href="assets/Pages/S14.html" class="btn disactive">ابدأ الآن</a>
                     </div>
