--- a/assets/Pages/f-html.html
+++ b/assets/Pages/f-html.html
@@ -20,8 +20,7 @@
         <a href="S1.html" class="btn">Session 1 /</a>
         <a href="S2.html" class="btn">Session 2 /</a>
         <a class="btn active">Session Full HTML /</a>
-        <a class="btn disactive">Session 3 /</a>
-        <a class="btn disactive">Session 4 /</a>
+        <a class="btn">Session 4 /</a>
         <a class="btn disactive">Session 5 /</a>
     </nav>
     <!-- End Nav -->
