--- a/assets/Pages/S1.html
+++ b/assets/Pages/S1.html
@@ -19,7 +19,8 @@
         <a href="S1.html" class="btn active">Session 1 /</a>
         <a href="S2.html" class="btn">Session 2 /</a>
         <a href="f-html.html" class="btn">Full HTML /</a>
-        <a class="btn disactive">Session 4 /</a>
+        <a href="S4.html" class="btn">Session 4 /</a>
+        <a href="S4.html" class="btn disactive">Session 4 /</a>
     </nav>
 <!-- End Nav -->
 
