--- a/assets/Pages/S5.html
+++ b/assets/Pages/S5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../img/LW6.png">
-    <title>Session 7</title>
+    <title>Session 5</title>
     <link rel="stylesheet" href="../Style/content.css">
 </head>
 <body> 
@@ -16,13 +16,13 @@
 
 <!-- Start Nav -->
     <nav>
-        <a href="S6.html" class="btn">Session 6 /</a>
-        <a class="btn active">Session 7 /</a>
-        <a href="S8.html" class="btn disactive">Session 8 /</a>
-        <a href="S9.html" class="btn disactive">Session 9 /</a>
-        <a href="S10.html" class="btn disactive">Session 10 /</a>
-        <a href="S11.html" class="btn disactive">Session 11 /</a>
-        <a href="S12.html" class="btn disactive">Session 12</a>
+        <a href="../../index.html" class="btn">Home / </a>
+        <a href="S1.html" class="btn">Session 1 /</a>
+        <a href="S2.html" class="btn">Session 2 /</a>
+        <a href="f-html.html" class="btn">Session Full HTML /</a>
+        <a href="S4.html" class="btn">Session 4 /</a>
+        <a class="btn active">Session 5 /</a>
+        <a href="S6.html" class="btn disactive">Session 6 /</a>
     </nav>
 <!-- End Nav -->
 
