--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                     <!-- Card 5 -->
                     <div class="card">
                         <h3>المحاضرة الخامسه</h3>
-                        <p>خصائص الترتيب</p>
-                        <a href="assets/Pages/S5.html" class="btn disactive">ابدأ الآن</a>
+                        <p>CSS 2</p>
+                        <a href="assets/Pages/S5.html" class="btn">ابدأ الآن</a>
                     </div>
                     <!-- Card 6 -->
                     <div class="card">
